feat: add skill details
